removes <button> from around links & enhances 'newElement' function. TODO: styling

--- a/index.html
+++ b/index.html
@@ -24,16 +24,12 @@
         </section>
 
         <section class="links">
-          <button class="btn link" id="tweet-btn">
-            <a href="" class="link" id="tweet-link" target="_blank">
+            <a href="" class="btn link" id="tweet-link" target="_blank">
               Tweet Quote
             </a>
-          </button>
-          <button class="btn link" id="wiki-btn">
-            <a href="" class="link" id="wiki-link" target="_blank">
+            <a href="" class="btn link" id="wiki-link" target="_blank">
               Wiki Author
             </a>
-          </button>
         </section>
 
         <section class="fav-buttons">
