--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="./assets/quote-logo.png">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Quoter</title>
+  <title>Random Ramblings</title>
 </head>
 <body>
   <div class="container">
