changes colors - styling

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         </section>
 
         <section class="fav-buttons">
-          <button class="btn" id="new-fav">Add to Favorites</button>
-          <button class="btn" id="clear-all-fav" hidden>Clear Favorites</button>
+          <button class="btn fav-add" id="new-fav">Add to Favorites</button>
+          <button class="btn fav-clear" id="clear-all-fav" hidden>
+            Clear Favorites
+          </button>
         </section>
       </section>
     </main>
