styles alert div with color coding for success & error msg. Adds error msg if no quote appears 2s after load

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </main>
     <footer class="favorites-section"></footer>
   </div>
-  <script src="./app.js" defer></script>
+  <script src="./app.js" async></script>
 </body>
 </html>
