uses some new APIs due to http restrictions from github pages. Also adds new category: 'Game of Thrones'

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <section class="display-section"></section>
       <section class="buttons">
         <section class="quote-buttons">
-          <button class="btn" id="random">Random</button>
+          <button class="btn" id="qotd">Quotes of Days Past</button>
           <button class="btn" id="inspire">Inspirational</button>
-          <button class="btn" id="program">Programming</button>
+          <button class="btn" id="random">Random</button>
+          <button class="btn" id="got">Game of Thrones</button>
         </section>
         <section class="links">
             <a href="" class="btn link" id="tweet-link" target="_blank">
