changes category to programming from game of thrones

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <button class="btn" id="qotd">Quotes of Days Past</button>
           <button class="btn" id="inspire">Inspirational</button>
           <button class="btn" id="random">Random</button>
-          <button class="btn" id="got">Game of Thrones</button>
+          <button class="btn" id="program">Programming</button>
         </section>
         <section class="links">
             <a href="" class="btn link" id="tweet-link" target="_blank">
