completely removes 4th quote button / category after recurring issues with bad APIs & slow Heroku servers

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <section class="display-section"></section>
       <section class="buttons">
         <section class="quote-buttons">
-          <button class="btn" id="qotd">Quotes of Days Past</button>
+          <button class="btn" id="qotd">Past Quotes of the Day</button>
           <button class="btn" id="inspire">Inspirational</button>
           <button class="btn" id="random">Random</button>
-          <button class="btn" id="program">Programming</button>
         </section>
         <section class="links">
             <a href="" class="btn link" id="tweet-link" target="_blank">
