--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <section class="display-section"></section>
       <section class="buttons">
         <section class="quote-buttons">
-          <button class="btn" id="qotd">Past Quotes of the Day</button>
-          <button class="btn" id="inspire">Inspirational</button>
           <button class="btn" id="random">Random</button>
+          <button class="btn" id="inspire">Inspirational</button>
+          <button class="btn" id="got">Game of Thrones</button>
         </section>
         <section class="links">
             <a href="" class="btn link" id="tweet-link" target="_blank">
