--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="quote-buttons">
           <button class="btn" id="random">Random</button>
           <button class="btn" id="inspire">Inspirational</button>
-          <button class="btn" id="got">Game of Thrones</button>
+          <button class="btn" id="simpsons">Simpsons</button>
         </section>
         <section class="links">
             <a href="" class="btn link" id="tweet-link" target="_blank">
